# epy_slides

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.py  epy_slides.spec  pyproject.toml
.github/workflows/: installers.yml
examples/empire_state_building/: README.md  empire_state_building.md  empire_state_building_es.md  render_all_themes.py
installer/: README.md  SHARED_RUNTIME.md  make_icon.py
installer/linux/: build_deb.py
installer/windows/: epy_slides.iss
src/epy_slides/: __init__.py  __main__.py  _design.py  _export_pdf.py  _i18n.py  _media_export.py  _pdf_footer.py  _previews.py  _revealjs_theme.py  about_dialog.py  app.py  bib.py  bib_dialog.py  checklist_dialog.py  design_block_dialog.py  epyson.py  equation_dialog.py  figure_dialog.py  latex_catalog.py  presentation_properties_dialog.py  renderer.py  slide_dialogs.py  slide_md.py  snippets.py  tab.py  table_dialog.py  template.py  templates.py  theme_editor_dialog.py  theme_gallery_dialog.py  themes.py  themes_base.py  winreg_assoc.py  xref_dialog.py
src/epy_slides/assets/: __init__.py  style.css  welcome.md  welcome_es.md
src/epy_slides/assets/branding/: __init__.py
src/epy_slides/assets/csl/: __init__.py
src/epy_slides/assets/mathjax/: __init__.py
src/epy_slides/assets/mermaid/: __init__.py
src/epy_slides/assets/nomnoml/: __init__.py
src/epy_slides/assets/reference_pptx/: __init__.py  academic.pptx  classic.pptx  corporate.pptx  creative.pptx  handwritten.pptx  minimal.pptx  professional.pptx  scientific.pptx  technical.pptx
src/epy_slides/assets/revealjs/: __init__.py
src/epy_slides/assets/themes/: __init__.py  academic.epyson  classic.epyson  colors.epyson  corporate.epyson  creative.epyson  handwritten.epyson  minimal.epyson  professional.epyson  scientific.epyson  technical.epyson
tests/: conftest.py  test_app.py  test_app_coverage_100.py  test_app_export.py  test_app_handlers.py  test_app_menus.py  test_bib.py  test_branding.py  test_checklist_dialog.py  test_citation_dialogs.py  test_citation_renderer.py  test_components_export.py  test_design_blocks.py  test_dialogs_extra.py  test_epyson.py  test_equation_dialog.py  test_export_pdf.py  test_export_pptx.py  test_figure_dialog.py  test_i18n.py  test_image_markdown.py  test_latex_catalog.py  test_main.py  test_media_export.py  test_modules_extra.py  test_next_label.py  test_pdf_footer.py  test_pdf_footer_extra.py  test_presentation_properties.py  test_previews.py  test_pure_extra.py  test_render_revealjs.py  test_renderer_extra.py  test_revealjs_theme.py  test_slide_dialogs.py  test_slide_md.py  test_slidedeck.py  test_snippets.py  test_tab.py  test_tab_export.py  (+10 more)
tools/: capture_screenshots.py  make_reference_pptx.py
