[project]
name = "epy_slides"
version = "0.1.6"
description = "Markdown slide editor with live reveal.js preview and PDF / HTML / PowerPoint export."
authors = [
    { name = "Ing. Angel Navarro-Mora M.Sc.", email = "ahnavarro@anmingenieria.com" },
]
maintainers = [
    { name = "ANM Ingeniería", email = "ahnavarro@anmingenieria.com" },
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Editors",
    "Topic :: Office/Business",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pypandoc-binary>=1.13",
    "pypdf>=4.0",
    "reportlab>=4.0",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://www.anmingenieria.com/"
Repository = "https://github.com/estructuraPy/epy_slides"
Issues = "https://github.com/estructuraPy/epy_slides/issues"
Changelog = "https://github.com/estructuraPy/epy_slides/blob/main/CHANGELOG.md"

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]
# NOTE: the epy_docs rendering backend is a commercial, privately
# distributed package (not on PyPI). It is detected at runtime when
# installed; do NOT add it here — a public extra pointing at an
# unregistered PyPI name is a dependency-confusion vector.
dev = ["pytest>=8.0"]

[project.gui-scripts]
epy_slides = "epy_slides.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epy_slides"]
# assets/ is a sub-package (has __init__.py) so hatchling already
# walks into it and bundles every asset alongside the .py files —
# no force-include needed. Re-introducing one would double-add
# `epy_slides/assets/__init__.py` and fail metadata generation.

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "SIM"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"build.py" = ["D"]
"epy_slides.spec" = ["D", "F821", "E501"]
# Data catalog: one symbol entry per line (label + Spanish tooltip);
# wrapping the rows to 79 chars would hurt, not help, readability.
"src/epy_slides/latex_catalog.py" = ["E501"]
# Embedded JavaScript reflow script lives in a triple-quoted string;
# its lines are JS, not Python, and must stay verbatim.
"src/epy_slides/template.py" = ["E501"]
# Example scripts favor readability over library docstring/line rules.
"examples/**/*.py" = ["D", "SIM105", "E501"]
# Installer build scripts embed shell heredocs and long literal paths.
"installer/**/*.py" = ["D", "E402", "E501"]
